--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "webpack"
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,26 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@rollup/plugin-wasm": "^5.1.1",
     "@types/jest": "^26.0.14",
+    "assemblyscript": "^0.17.2",
     "babel-loader": "^8.1.0",
     "jest": "^26.5.3",
+    "rollup": "^2.33.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-wasm": "^3.0.0",
+    "rollup-plugin-wasm-module": "0.0.3",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.5",
     "typescript": "^4.0.3",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@assemblyscript/loader": "^0.17.2",
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "debug": "^4.2.0"
+  }
 }
