--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-wasm": "^5.1.1",
     "@types/jest": "^26.0.14",
     "assemblyscript": "^0.17.2",
@@ -40,9 +42,6 @@
     "webpack-cli": "^4.0.0"
   },
   "dependencies": {
-    "@assemblyscript/loader": "^0.17.2",
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "debug": "^4.2.0"
+    "gpu.js": "^2.10.5"
   }
 }
