--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "deepnet",
   "version": "1.0.0",
-  "description": "this is a neural network pakage implemented for javascript",
-  "main": "index.js",
+  "description": "Auto-differentiation library for javascript",
+  "main": "dist/deepnet.cjs.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "jest",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "build-ts-tensor": "tsc src/core/engine/tensor.test.ts"
   },
   "repository": {
     "type": "git",
@@ -33,13 +34,12 @@
     "jest": "^26.5.3",
     "rollup": "^2.33.1",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-wasm": "^3.0.0",
     "rollup-plugin-wasm-module": "0.0.3",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.5",
-    "typescript": "^4.0.3",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "gpu.js": "^2.10.5"
