--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,23 +4,26 @@
     "allowSyntheticDefaultImports": true,
     "checkJs": false,
     "esModuleInterop": true,
-    // "declaration": true,
-    // "emitDeclarationOnly": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "isolatedModules": true,
     // "declarationMap": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     // "noEmit": true,
     "noEmitOnError": true,
-    "outDir": "./dist",
-    "rootDir": "./",
+    "outDir": "./dist/",
+    "rootDir": "./src/core/engine",
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
+    "target": "es5"
   },
   "includes": [
-    "rollupTest/**/*"
+    "src/**/*"
   ],
   "exclude": [
-    "assm/**/*"
+    "assm/**/*",
+    "node_modules/**/*",
+    "old/**/*",
   ]
 }
