implemented wasm, not yet merged

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ src/blocks/tests/tf.html
 
 src/blocks/tests/n-array/test.js
 src/blocks/tests/n-array/test.py
+src/core/engine/wasm/wasm-build/
+
 
 node_modules/
 dist/
 dist_ts/
 dist_node/
+dist_test/
