--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
           // }
         ],
         "@babel/preset-typescript"
-    ]
+    ],
+    "plugins": ["@babel/plugin-proposal-class-properties"]
        
 }
