--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "test": "jest",
     "build:browser": "rollup -c rollup.config.browser.js",
-    "build:node": "rollup -c rollup.config.js" ,
-    "build":"npm run build:browser && npm run build:node"
+    "build:node": "rollup -c rollup.config.js",
+    "build:test": "rollup -c rollup.config_test.js",
+    "build": "npm run build:browser && npm run build:node"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/karthiTox/deepnet.js#readme",
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@rollup/plugin-commonjs": "^16.0.0",
@@ -44,6 +46,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/emscripten": "^1.39.4",
     "gpu.js": "^2.10.5"
   }
 }
