--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2.1.1
       - name: node
-        uses: actions/setup-node@v1.4.2
+        uses: actions/setup-node@v2
         with:
-            node-version: 10.x
+            node-version: 10
       - name: test
         run: npm run test        
