--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,5 @@ jobs:
         uses: actions/setup-node@v2
         with:
             node-version: 10
-      - name: test
-        run: npm ci
+        run: npm install
         run: npm run test        
