--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,10 @@ jobs:
     name: test
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v2.1.1
-      - name: node
+      - uses: actions/checkout@v2
+      - name: Setup node
         uses: actions/setup-node@v2
         with:
-            node-version: 10
-        run: npm install
-        run: npm run test        
+          node-version: 10
+      - run: npm install
+      - run: npm run test     
