--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,6 @@
 name: "test"
 
-on:
-  push:
-    branches:
-      - develop
+on: [push, pull_request]
 
 jobs:
   testing:
@@ -16,4 +13,4 @@ jobs:
         with:
           node-version: 10
       - run: npm install
-      - run: npm run test     
+      - run: npm run test:src     
