--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,10 +15,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 10
+          registry-url: https://registry.npm.org
       - run: npm install
       - run: npm run test:src
       - run: npm run build
       - run: npm run test:dist
-      - run: npm publish
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}  
