--- a/.npmignore
+++ b/.npmignore
@@ -9,7 +9,8 @@ testing/
 
 .babelrc
 .gitignore
-jest.config.js
+jest.src.config.js
+jest.testing.config.js
 rollup.config.js
 rollup.config.browser.js
 rollup.config_test.js
