--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 10
-          registry-url: https://registry.npm.org          
+          registry-url: https://registry.npmjs.org          
+      - run: npm run test:src      
+      - run: npm run build      
+      - run: npm run test:dist      
       - name: npm-publish
         run: npm publish --access public
         env:
