--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: 10
           registry-url: https://registry.npmjs.org          
+      - run: npm install
       - run: npm run test:src      
       - run: npm run build      
       - run: npm run test:dist      
